Social Links and CV Added

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="site-buttons">
             <div class="d-flex flex-row flex-wrap">
               <button type="button" class="btn btn-primary mr-4 text-uppercase">hire me!</button>
-              <button type="button" class="btn btn-success text-uppercase">Get Cv</button>
+              <a href="files/CV_DINESH_BISHWAKARMA.pdf" target="_new"><button type="button" class="btn btn-success text-uppercase">Get Cv</button></a>
              </div>
           </div>
         </div>
@@ -460,10 +460,11 @@
           <div class="col-md-3">
             <h4>Follow Me</h4>
                 <ul class="social-network social-circle">
-                 <li><a href="https://wwww.facebook.com/lostb1" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                 <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                 <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-twitter"></i></a></li>
-                 <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-instagram"></i></a></li>
+                 <li><a href="https://wwww.facebook.com/lostb1" target="_new" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                 <li><a href="https://www.linkedin.com/in/lostb1" target="_new" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                 <li><a href="https://www.twitter.com/mylife_dinesh08" target="_new" class="icoLinkedin" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                 <li><a href="https://www.instagram.com/lostb1" target="_new" class="icoLinkedin" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                 <li><a href="https://www.github.com/lostb1" target="_new" class="icoLinkedin" title="Github"><i class="fa fa-github"></i></a></li>
                 </ul>				
         </div>
         </div>
