--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                  <li><a href="https://www.linkedin.com/in/lostb1" target="_new" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                  <li><a href="https://www.twitter.com/mylife_dinesh08" target="_new" class="icoLinkedin" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                  <li><a href="https://www.instagram.com/lostb1" target="_new" class="icoLinkedin" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-                 <li><a href="https://www.github.com/lostb1" target="_new" class="icoLinkedin" title="Github"><i class="fa fa-github"></i></a></li>
+                 <li><a href="https://www.github.com/lostb1d" target="_new" class="icoLinkedin" title="Github"><i class="fa fa-github"></i></a></li>
                 </ul>				
         </div>
         </div>
